force-app/main/default/objects/cgcloud__Batch_Run_Status__c/cgcloud__Batch_Run_Status__c.object-meta.xml
<CustomObject>
    <description>Keeps track of batch processes</description>
    <label>Batch Run Status</label>
    <nameField>
        <displayFormat>BRS-{00000000}</displayFormat>
        <label>Batch Run Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Run Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>