force-app/main/default/objects/cgcloud__Batch_Run_Status__c/fields/cgcloud__Batch_Chain__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Batch_Chain__c</fullName>
    <description>Identifies processes that are running within one process chain.</description>
    <inlineHelpText>Identifies processes that are running within one process chain.</inlineHelpText>
    <label>Batch Chain</label>
    <length>80</length>
    <type>Text</type>
</CustomField>