force-app/main/default/objects/cgcloud__Batch_Run_Status__c/fields/cgcloud__Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Batch_ID__c</fullName>
    <description>Identifier of the batch process instance.</description>
    <label>Batch ID</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>