force-app/main/default/objects/cgcloud__Batch_Run_Status__c/fields/cgcloud__Batch_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Batch_Name__c</fullName>
    <description>Name of the batch process.</description>
    <label>Batch Name</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>