force-app/main/default/objects/cgcloud__Batch_Run_Status__c/fields/cgcloud__Batch_State__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Batch_State__c</fullName>
    <description>State of the batch process.</description>
    <label>Batch State</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Fatal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>