force-app/main/default/objects/cgcloud__Batch_Run_Status__c/fields/cgcloud__Batch_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Batch_Type__c</fullName>
    <description>Type of the batch process.</description>
    <label>Batch Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Worker</fullName>
            </value>
            <value>
                <fullName>APEX</fullName>
            </value>
            <value>
                <fullName>Managed</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>