force-app/main/default/objects/cgcloud__Batch_Run_Status__c/fields/cgcloud__Duration_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Duration_Time__c</fullName>
    <description>Runtime of the batch process in milliseconds.</description>
    <label>Duration Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>