force-app/main/default/objects/cgcloud__Batch_Run_Status__c/fields/cgcloud__End_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__End_Date__c</fullName>
    <description>End date and time of the batch process.</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>