force-app/main/default/objects/cgcloud__Batch_Run_Status__c/fields/cgcloud__Items_Done__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Items_Done__c</fullName>
    <description>Number of job items successfully processed.</description>
    <label>Items Done</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>