force-app/main/default/objects/cgcloud__Batch_Run_Status__c/fields/cgcloud__Items_Error__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Items_Error__c</fullName>
    <description>Number of job items processed with error.</description>
    <label>Items Error</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>