force-app/main/default/objects/cgcloud__Batch_Run_Status__c/fields/cgcloud__Items_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Items_Scheduled__c</fullName>
    <description>Number of job items scheduled for a job.</description>
    <label>Items Scheduled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>