force-app/main/default/objects/cgcloud__Batch_Run_Status__c/fields/cgcloud__Job_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Job_Name__c</fullName>
    <description>Job Name under which the process is scheduled.</description>
    <inlineHelpText>Job Name under which the process is scheduled.</inlineHelpText>
    <label>Job Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>