force-app/main/default/objects/cgcloud__Batch_Run_Status__c/fields/cgcloud__Last_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Last_Update_Date__c</fullName>
    <description>Last update date and time of the batch process.</description>
    <label>Last Update Date</label>
    <type>DateTime</type>
</CustomField>