force-app/main/default/objects/cgcloud__Batch_Run_Status__c/fields/cgcloud__Process_Count__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Process_Count__c</fullName>
    <description>Count of process instances involved in job processing.</description>
    <label>Process Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>