force-app/main/default/objects/cgcloud__Batch_Run_Status__c/fields/cgcloud__Progress_Current_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Progress_Current_Value__c</fullName>
    <description>Last progress update of the batch process.</description>
    <label>Progress Current Value</label>
    <type>TextArea</type>
</CustomField>