force-app/main/default/objects/cgcloud__Batch_Run_Status__c/fields/cgcloud__Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Org__c</fullName>
    <description>SalesOrg context on which the batch process is running.</description>
    <label>Sales Org</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>