force-app/main/default/objects/cgcloud__Batch_Run_Status__c/fields/cgcloud__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Start_Date__c</fullName>
    <description>Start date and time of the batch process.</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>