force-app/main/default/objects/cgcloud__Batch_Run_Status__c/fields/cgcloud__Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Transaction_ID__c</fullName>
    <description>Log transaction ID as assigned to the batch process.</description>
    <label>Transaction ID</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>