force-app/main/default/objects/cgcloud__Batch_Run_Status__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Last_Update_Date__c</columns>
    <columns>cgcloud__Batch_Name__c</columns>
    <columns>cgcloud__Batch_State__c</columns>
    <columns>cgcloud__Progress_Current_Value__c</columns>
    <columns>cgcloud__Process_Count__c</columns>
    <columns>cgcloud__Items_Scheduled__c</columns>
    <columns>cgcloud__Items_Done__c</columns>
    <columns>cgcloud__Items_Error__c</columns>
    <columns>cgcloud__Start_Date__c</columns>
    <columns>cgcloud__End_Date__c</columns>
    <columns>cgcloud__Batch_Type__c</columns>
    <columns>cgcloud__Sales_Org__c</columns>
    <columns>cgcloud__Batch_Chain__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>